# Projet-HAI927

./: .gitignore  README.md  form_methods.txt
docs/: README.md
docs/CRs/: README.md
docs/articles/: README.md
lfw/: polling_example.txt  polling_form.txt  readme.txt  triplets.txt  triplets_large.txt  triplets_large_test.txt  triplets_test.txt
lfw/Aaron_Guiel/: Aaron_Guiel_0001.jpg.faceloc
lfw/Aaron_Patterson/: Aaron_Patterson_0001.jpg.faceloc
lfw/Aaron_Sorkin/: Aaron_Sorkin_0001.jpg.faceloc
lfw/Aaron_Tippin/: Aaron_Tippin_0001.jpg.faceloc
lfw/Abdel_Nasser_Assidi/: Abdel_Nasser_Assidi_0001.jpg.faceloc
lfw/Abdoulaye_Wade/: Abdoulaye_Wade_0003.jpg.faceloc  Abdoulaye_Wade_0004.jpg.faceloc
lfw/Abdul_Rahman/: Abdul_Rahman_0001.jpg.faceloc
lfw/Abdulaziz_Kamilov/: Abdulaziz_Kamilov_0001.jpg.faceloc
lfw/Abdullah/: Abdullah_0002.jpg.faceloc
lfw/Abdullah_Gul/: Abdullah_Gul_0014.jpg.faceloc  Abdullah_Gul_0016.jpg.faceloc
lfw/Abdullah_al-Attiyah/: Abdullah_al-Attiyah_0001.jpg.faceloc
lfw/Abdullatif_Sener/: Abdullatif_Sener_0001.jpg.faceloc
lfw/Abel_Pacheco/: Abel_Pacheco_0002.jpg.faceloc  Abel_Pacheco_0004.jpg.faceloc
lfw/Abid_Hamid_Mahmud_Al-Tikriti/: Abid_Hamid_Mahmud_Al-Tikriti_0002.jpg.faceloc  Abid_Hamid_Mahmud_Al-Tikriti_0003.jpg.faceloc
lfw/Aby_Har-Even/: Aby_Har-Even_0001.jpg.faceloc
lfw/Adam_Mair/: Adam_Mair_0001.jpg.faceloc
lfw/Adam_Sandler/: Adam_Sandler_0002.jpg.faceloc
lfw/Adolfo_Aguilar_Zinser/: Adolfo_Aguilar_Zinser_0002.jpg.faceloc
lfw/Adolfo_Rodriguez_Saa/: Adolfo_Rodriguez_Saa_0001.jpg.faceloc
lfw/Adrian_McPherson/: Adrian_McPherson_0002.jpg.faceloc
lfw/Adrian_Nastase/: Adrian_Nastase_0002.jpg.faceloc
lfw/Ahmad_Masood/: Ahmad_Masood_0002.jpg.faceloc
lfw/Ahmed_Ibrahim_Bilal/: Ahmed_Ibrahim_Bilal_0001.jpg.faceloc
lfw/Ahmed_Qureia/: Ahmed_Qureia_0001.jpg.faceloc
lfw/Ahmet_Demir/: Ahmet_Demir_0001.jpg.faceloc
lfw/Ai_Sugiyama/: Ai_Sugiyama_0002.jpg.faceloc  Ai_Sugiyama_0003.jpg.faceloc
lfw/Ain_Seppik/: Ain_Seppik_0001.jpg.faceloc
lfw/Aishwarya_Rai/: Aishwarya_Rai_0001.jpg.faceloc
lfw/Aitor_Gonzalez/: Aitor_Gonzalez_0001.jpg.faceloc
lfw/Aiysha_Smith/: Aiysha_Smith_0001.jpg.faceloc
lfw/Akbar_Al_Baker/: Akbar_Al_Baker_0001.jpg.faceloc
lfw/Al_Cardenas/: Al_Cardenas_0001.jpg.faceloc
lfw/Al_Pacino/: Al_Pacino_0002.jpg.faceloc
lfw/Alain_Cervantes/: Alain_Cervantes_0001.jpg.faceloc
lfw/Alain_Ducasse/: Alain_Ducasse_0001.jpg.faceloc
lfw/Alan_Greenspan/: Alan_Greenspan_0001.jpg.faceloc  Alan_Greenspan_0003.jpg.faceloc  Alan_Greenspan_0005.jpg.faceloc
lfw/Alan_Trammell/: Alan_Trammell_0001.jpg.faceloc
lfw/Alanis_Morissette/: Alanis_Morissette_0001.jpg.faceloc
lfw/Albert_Costa/: Albert_Costa_0003.jpg.faceloc
lfw/Alberta_Lee/: Alberta_Lee_0001.jpg.faceloc
lfw/Alberto_Gonzales/: Alberto_Gonzales_0001.jpg.faceloc
lfw/Alberto_Ruiz_Gallardon/: Alberto_Ruiz_Gallardon_0001.jpg.faceloc  Alberto_Ruiz_Gallardon_0002.jpg.faceloc
lfw/Aldo_Paredes/: Aldo_Paredes_0002.jpg.faceloc
lfw/Alec_Baldwin/: Alec_Baldwin_0001.jpg.faceloc  Alec_Baldwin_0003.jpg.faceloc
lfw/Alejandro_Atchugarry/: Alejandro_Atchugarry_0002.jpg.faceloc
lfw/Alejandro_Avila/: Alejandro_Avila_0003.jpg.faceloc
lfw/Alejandro_Toledo/: Alejandro_Toledo_0010.jpg.faceloc  Alejandro_Toledo_0021.jpg.faceloc
lfw/Alex_Penelas/: Alex_Penelas_0002.jpg.faceloc
lfw/Alex_Sink/: Alex_Sink_0001.jpg.faceloc
lfw/Alex_Wallau/: Alex_Wallau_0001.jpg.faceloc
lfw/Alexander_Losyukov/: Alexander_Losyukov_0001.jpg.faceloc  Alexander_Losyukov_0003.jpg.faceloc
lfw/Alexander_Lukashenko/: Alexander_Lukashenko_0001.jpg.faceloc
lfw/Alexander_Payne/: Alexander_Payne_0001.jpg.faceloc
lfw/Alexander_Rumyantsev/: Alexander_Rumyantsev_0002.jpg.faceloc
lfw/Alexandra_Stevenson/: Alexandra_Stevenson_0003.jpg.faceloc
lfw/Alexandra_Vodjanikova/: Alexandra_Vodjanikova_0002.jpg.faceloc
lfw/Alexandre_Vinokourov/: Alexandre_Vinokourov_0001.jpg.faceloc
lfw/Alfred_Sant/: Alfred_Sant_0001.jpg.faceloc
lfw/Ali_Abbas/: Ali_Abbas_0001.jpg.faceloc
lfw/Ali_Bin_Hussein/: Ali_Bin_Hussein_0001.jpg.faceloc
lfw/Ali_Fallahian/: Ali_Fallahian_0001.jpg.faceloc
lfw/Ali_Khamenei/: Ali_Khamenei_0001.jpg.faceloc  Ali_Khamenei_0002.jpg.faceloc  Ali_Khamenei_0003.jpg.faceloc
lfw/Ali_Naimi/: Ali_Naimi_0005.jpg.faceloc  Ali_Naimi_0007.jpg.faceloc  Ali_Naimi_0008.jpg.faceloc
lfw/Alice_Fisher/: Alice_Fisher_0001.jpg.faceloc
lfw/Alicia_Silverstone/: Alicia_Silverstone_0001.jpg.faceloc  Alicia_Silverstone_0002.jpg.faceloc
lfw/Alimzhan_Tokhtakhounov/: Alimzhan_Tokhtakhounov_0001.jpg.faceloc
lfw/Alison_Lohman/: Alison_Lohman_0001.jpg.faceloc
lfw/Allan_Houston/: Allan_Houston_0001.jpg.faceloc
lfw/Allison_Janney/: Allison_Janney_0002.jpg.faceloc
lfw/Allison_Searing/: Allison_Searing_0001.jpg.faceloc
lfw/Alma_Powell/: Alma_Powell_0001.jpg.faceloc
lfw/Almeida_Baptista/: Almeida_Baptista_0001.jpg.faceloc
lfw/Amelia_Vega/: Amelia_Vega_0006.jpg.faceloc
src/: CMakeLists.txt  README.md  build_model.sh.in
src/Annotate/: CMakeLists.txt  annotate.cpp
src/Blackhead/: CMakeLists.txt  blackhead.cpp
src/Blur/: CMakeLists.txt  blur.cpp
src/Classification/: Classification.ipynb  Classification.py
src/DisplaySystem/: CMakeLists.txt  DisplaySystem.cpp  DisplaySystem.h
src/Faceloc/: CMakeLists.txt  faceloc.cpp  faceloc.h
src/GUI/: CMakeLists.txt  Commands.cpp  Commands.h  FileSelector.cpp  FileSelector.h  FileSelector.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ToolWindow.cpp  ToolWindow.h  ToolWindow.ui  main.cpp
src/GenDataSet/: CMakeLists.txt  gendataset.cpp
src/GenPollingData/: CMakeLists.txt  genpollingdata.cpp
src/Obscuration/: CMakeLists.txt  blackhead.cpp  blur.cpp  obscuration.cpp  obscuration.h  pixel.cpp
src/ObscureDataSet/: CMakeLists.txt  obscuredataset.cpp
src/Pixel/: CMakeLists.txt  pixel.cpp
src/Tools/: CMakeLists.txt  annotate.cpp  annotatefuncs.cpp  datasetfuncs.cpp  gendataset.cpp  genpollingdata.cpp  obscuredataset.cpp  obscuredatasetfuncs.cpp  tools.h
src/blur/: CMakeLists.txt  blur.cpp
(+2541 files in other folders)
